# jinshu_ai

./: .gitignore  README.md  README_EN.md  clean_md.py  convert_docx_to_md.py  main.py  pyproject.toml
1_SOURCE/: 001.md  045.md  101.md  102.md  110.md  123.md  124.md  128.md
2_AI_TRANSLATION/: 103_Liu_Yao.docx  109_Murong_Huang.docx  110_Murong_Jun.docx  111_Murong_Wei.docx  127_Murong_De.docx
3_HUMAN_REVIEW/: 103_Liu_Yao.docx  108_Murong_Hui.docx  109_Murong_Huang.docx  110_Murong_Jun.docx  123_Murong_Chui.docx
4_FINAL/: Book of Jin.docx
docs/: PROLOGUE_EN.MD  README_EN.md  contents.md
docs/EN/: README_EN.md  TUTORIAL_EN.MD
docs/ZH/: PROLOGUE_ZH.MD  TUTORIAL_ZH.MD
edited/: 123_Murong_Bao.docx
md_files/: 123_Murong_Chui.md  123_Murong_Chui_2.md
original_text/: 002.md  003.md  004.md  097.md  103_Liu_Yao.md  109_Murong_Huang.md  111.md  127.md  Liu_Yao.md  Murong_Huai.md  Murong_Huang.md
results/: 097_Four_Barbarians.docx  102_Liu_Cong.docx  103_Liu_Yao.docx  109_Murong_Huang.docx  111_Murong_Wei.docx  123_Murong_Chui.docx  128_Murong_Chao.docx  Liu_Cong.docx  Liu_Yao.docx  Murong_Huang.docx  Murong_Hui.docx
translator/: __init__.py  chatbot.py  config.py  formatter.py  prompts.py  translator.py  utils.py
