[project]
name = "jinshu_ai"
version = "0.1.0"
description = "Python tool for translating md documents to formatted docx"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "openai>=1.57.2",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.8.0",
    "tqdm>=4.67.1",
]
